# pdf-finder

./: Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: python-app.yml  release.yml  testing.yml
finder/: __init__.py  __main__.py  funcs.py  pdf.py
pdf-finder/: main.py
pdf-finder/src/: funcs.py  pdf.py
pdf-finder/tests/: test_func.py  test_pdf.py
src/: funcs.py  main.py  pdf.py
tests/: conftest.py  test_func.py  test_main.py  test_pdf.py
