[tool.poetry]
name = "pdf-finder"
version = "0.1.0"
description = "A Python program to locate links to PDFs found within a webpage from the command line"
authors = ["TonyGrif <TonyGriffin2000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
types-requests = "^2.31.0.20240218"
types-beautifulsoup4 = "^4.12.0.20240106"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
tox = "^4.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
ruff = "^0.2.2"

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
