[tool.poetry]
name = "pdf-finder"
version = "1.0"
description = "A Python program to locate links to PDFs found within a webpage from the command line"
authors = ["TonyGrif <TonyGriffin2000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finder"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
tox = "^4.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
ruff = "^0.2.2"
types-requests = "^2.31.0.20240218"
types-beautifulsoup4 = "^4.12.0.20240106"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = "True"

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox>=4
    env_list = py{38, 39, 310, 311, 312}
    isolated_build = true

    [testenv]
    description = Run the PyTest Suite.
    skip_install = true
    deps = poetry
    commands_pre =
        poetry install --only main,test
    commands =
        poetry run pytest --cov
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
